[gd_scene load_steps=4 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://graph.gd" type="Script" id=2]
[ext_resource path="res://logger.gd" type="Script" id=3]

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="UIroot" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 302.0
margin/bottom = 166.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Population Size (int):

Tournament Size (int):

Genome Size (int):

Mutation Rate (float):

Fitness Script (str):"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Popbox" type="LineEdit" parent="UIroot"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 138.0
margin/top = -4.0
margin/right = 211.0
margin/bottom = 20.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Tourbox" type="LineEdit" parent="UIroot"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 147.0
margin/top = 29.0
margin/right = 220.0
margin/bottom = 53.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Genebox" type="LineEdit" parent="UIroot"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 63.0
margin/right = 199.0
margin/bottom = 87.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="DrawGraph" type="CheckBox" parent="UIroot/Genebox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 517.0
margin/top = 2.0
margin/right = 543.0
margin/bottom = 25.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Fitnessbox" type="LineEdit" parent="UIroot"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 127.0
margin/top = 132.0
margin/right = 200.0
margin/bottom = 156.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Mutatebox" type="LineEdit" parent="UIroot"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 141.0
margin/top = 98.0
margin/right = 214.0
margin/bottom = 122.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="MoreOptions" type="Label" parent="UIroot"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = 0.0
margin/right = 552.0
margin/bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Crossover Rate (float):

Generation Script (str):
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Crossratebox" type="LineEdit" parent="UIroot/MoreOptions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 147.0
margin/top = -4.0
margin/right = 220.0
margin/bottom = 20.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Genscriptbox" type="LineEdit" parent="UIroot/MoreOptions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 157.0
margin/top = 29.0
margin/right = 230.0
margin/bottom = 53.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Checkzone" type="Label" parent="UIroot"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 520.0
margin/top = 0.0
margin/right = 727.0
margin/bottom = 150.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Smaller fitness values are better



Draw fitness graph"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Reversefitness" type="CheckBox" parent="UIroot/Checkzone"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 213.0
margin/top = -5.0
margin/right = 239.0
margin/bottom = 18.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Start" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 721.0
margin/top = 144.0
margin/right = 766.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start!"
flat = false

[node name="Pause" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 777.0
margin/top = 144.0
margin/right = 822.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false

[node name="Resume" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 837.0
margin/top = 144.0
margin/right = 901.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="SingleIteration" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 907.0
margin/top = 144.0
margin/right = 1016.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Iteration"
flat = false

[node name="GraphDrawer" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="Logger" type="Node" parent="."]

script/script = ExtResource( 3 )

[connection signal="text_entered" from="UIroot/Popbox" to="." method="_on_Popbox_text_entered"]

[connection signal="text_entered" from="UIroot/Tourbox" to="." method="_on_Tourbox_text_entered"]

[connection signal="text_entered" from="UIroot/Genebox" to="." method="_on_Genebox_text_entered"]

[connection signal="toggled" from="UIroot/Genebox/DrawGraph" to="GraphDrawer" method="_on_DrawGraph_toggled"]

[connection signal="text_entered" from="UIroot/Fitnessbox" to="." method="_on_Fitnessbox_text_entered"]

[connection signal="text_entered" from="UIroot/Mutatebox" to="." method="_on_Mutatebox_text_entered"]

[connection signal="text_entered" from="UIroot/MoreOptions/Crossratebox" to="." method="_on_Crossratebox_text_entered"]

[connection signal="toggled" from="UIroot/Checkzone/Reversefitness" to="." method="_on_Reversefitness_toggled"]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="SingleIteration" to="." method="_on_SingleIteration_pressed"]


